--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,6 +1,9 @@
 name: Pre-commit Checks
 
-on: [pull_request]
+on: 
+  pull_request:
+    paths:
+      - "tuning/*"
 
 permissions:
   contents: read
@@ -18,12 +21,18 @@ jobs:
         with:
           python-version: '3.10.12'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
+      - name: Change to `tuning` directory
+        run: cd tuning
 
-      - name: Run pre-commit hooks in `tuning`
+      - name: Run lint test
+        uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: |
+            --show-diff-on-failure
+            --color=always
+      
+      - name: Run pytest
         working-directory: tuning
         run: |
-          pre-commit run --all-files
+          pytest -m test_autotune.py
+          pytest -m test_tune.py
