--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -28,9 +28,8 @@ jobs:
         working-directory: tuning
         uses: pre-commit/action@v3.0.1
         with:
-          extra_args: |
+          extra_args:
             --show-diff-on-failure
-            --color=always
             
       
       - name: Run pytest
