--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -28,8 +28,7 @@ jobs:
         working-directory: tuning
         uses: pre-commit/action@v3.0.1
         with:
-          extra_args:
-            --show-diff-on-failure
+          extra_args: --show-diff-on-failure
             
       
       - name: Run pytest
