--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -21,12 +21,8 @@ jobs:
         with:
           python-version: '3.10.12'
 
-      - name: Change to `tuning` directory
-        run: cd tuning
-
       - name: Run lint test
-      working-directory: tuning
-      uses: pre-commit/action@v3.0.1
+        run: pre-commit run --all-files --show-diff-on-failure --color=always
                 
       - name: Run pytest
         working-directory: tuning
