--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           python-version: '3.10.12'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
+
       - name: Run lint test
         run: pre-commit run --all-files --show-diff-on-failure --color=always
                 
