--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -26,8 +26,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pre-commit
 
-      - name: Run lint test
-        run: pre-commit run --all-files --show-diff-on-failure --color=always
+      # - name: Run lint test
+      #   run: pre-commit run --all-files --show-diff-on-failure --color=always
                 
       - name: Run pytest
         working-directory: tuning
