--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit
+          pip install -r requirements-dev.txt
+          pip install -r tuning/requirements.txt
 
       # - name: Run lint test
       #   run: pre-commit run --all-files --show-diff-on-failure --color=always
